# ros_aruco

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: logitech_9000_intrinsics.yml~
src/: publisher.cpp  ros_aruco.cpp
